IMPALA-4246: SleepForMs() utility function has undefined behavior for > 1s

Our SleepForMs() function relied on usleep() which sleeps for 'n'
microseconds. However, the manpage for usleep() specifies that this
may not work for values > 1000000 us (or 1s).

This patch removes the use of usleep() and uses
std::this_thread::sleep_for() instead, which was introduced with C++11.

Change-Id: I06c55b1be287b264e7601c9c89788ae5929571cf
Reviewed-on: http://gerrit.cloudera.org:8080/4622
Reviewed-by: Sailesh Mukil <sailesh@cloudera.com>
Tested-by: Internal Jenkins